--- a/sample.html
+++ b/sample.html
@@ -1,3 +1,11 @@
 <html>
-HELLO LESTER LOVE YOU TOO <3
+<body>
+
+<h1>Hello World!</h1>
+<br>
+<h2>Hello World!</h2>
+<br>
+<h3>Hello World!</h3>
+
+</body>
 </html>
